@@ -5,6 +5,8 @@ New features:
 A.F....... [ZBX-1357] updated Spanish translation; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+A.F....... [ZBX-8194] improved validation for web scenarios and web steps (Ivo, Krists)
+...G...... [ZBX-8269] fixed processing of active checks in agent (Andris)
 ...G...... [ZBX-8238] fixed updating agent 'mtime' for logrt[] items; thanks to Yoshinori Komuro for patch (Andris)
 ..F....... [ZBX-7535] trivial change from 'Link' to 'URL' in error messages (Andrejs)
 ..F....... [ZBX-8259] fixed padding for widgets in screen (Andrejs)
@@ -152,6 +154,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese, Romanian,
 ........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)
 
 Bug fixes:
+...G...... [ZBX-8269] fixed processing of active checks in agent (Andris)
 ...G...... [ZBX-8238] fixed updating agent 'mtime' for logrt[] items; thanks to Yoshinori Komuro for patch (Andris)
 ........S. [ZBX-8143] triggers are now committed to the database individually when setting to an unknown state to avoid potential locking between the poller and history syncer (Juris)
 .......P.. [ZBX-7968] fixed bug when proxy stopped sending history data if it had more than 1000 unmonitored item values in history table; thanks to Corey Shaw for identifying the issue and providing a patch (wiper)
@@ -1101,6 +1104,7 @@ Changes for 2.0.13rc1
 New features:
 
 Bug fixes:
+...G...... [ZBX-8269] fixed processing of active checks in agent (Andris)
 ...G...... [ZBX-8238] fixed updating agent 'mtime' for logrt[] items; thanks to Yoshinori Komuro for patch (Andris)
 ...G...PS. [ZBX-7098] improved handling of log file rotation/truncation for logrt[] and log[] items (Andris)
 ...G...... [ZBX-8198] decreased verbosity of Windows agent with DebugLevel=4 (Nikolaj)
